--- a/JENKINSFILE
+++ b/JENKINSFILE
@@ -9,7 +9,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'main', url: 'https://github.com/hanineBaccar123/test-devops/www.git'
+                git branch: 'master', url: 'https://github.com/hanineBaccar123/test-devops.git'
             }
         }
 
